CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(maze)

# check for freeglut
FIND_PACKAGE(GLUT)
IF(GLUT_FOUND)
    SET(HAVE_FREEGLUT TRUE)
    SET(STATUS_FREEGLUT "OK")
    MESSAGE("Found freeglut")
ELSE(GLUT_FOUND)
    SET(STATUS_FREEGLUT "not found")
    MESSAGE("Could not find glut")
ENDIF(GLUT_FOUND)

# check for opengl
FIND_PACKAGE(OpenGL)
IF(OPENGL_FOUND)
    SET(HAVE_OPENGL TRUE)
    SET(STATUS_OPENGL "OK")
    MESSAGE("Found OpenGL")
ELSE(OPENGL_FOUND)
    SET(STATUS_OPENGL "not found")
    MESSAGE("Could not find OpenGL")
ENDIF(OPENGL_FOUND)

FIND_PACKAGE(SOIL)

FILE(GLOB SOURCES ${CMAKE_SOURCE_DIR}/*.cpp)
FILE(GLOB INCLUDES ${CMAKE_SOURCE_DIR}/*.h)

INCLUDE_DIRECTORIES(${GLUT_INCLUDE_DIR} ${OPENGL_INCLUDE_DIR} )

ADD_EXECUTABLE(maze ${SOURCES})
TARGET_LINK_LIBRARIES(maze ${GLUT_LIBRARIES} ${OPENGL_LIBRARIES} SOIL)
